drk03/k8s/drk03_app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drk03-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drk03-app
  template:
    metadata:
      labels:
        app: drk03-app
    spec:
      containers:
        - name: drk03-app-container
          image: localhost:5000/drk/drk03-app:latest
          imagePullPolicy: 'Always'
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: drk03-app-service
  labels:
    app: drk03-app
spec:
  selector:
    app: drk03-app
  ports:
    - port: 3001
---
