drk03/k8s/drk03_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drk03-ingress
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: drk03-app-service
              servicePort: 3001
